--- a/css/style.css
+++ b/css/style.css
@@ -1,105 +1,131 @@
 * {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-  }
-  
-  body {
-    background-color: #1a191f;
-    font-family: "Open Sans", sans-serif;
-  }
-  
-  .container {
-    max-width: 1200px;
-    margin: 0 auto;
-  }
-  
-  .header__content {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 16px;
-    height: 60px;
-  }
-  
-  .header__logo {
-    font-size: 32px;
-    text-decoration: none;
-    color: #ffffff;
-  }
-  
-  .header__search {
-    padding: 8px;
-    border: 2px solid #1a191f;
-    border-radius: 5px;
-    outline: none;
-  }
-  
-  .movies {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-  }
-  
-  .movie {
-    width: 240px;
-    margin: 10px;
-    position: relative;
-  }
-  
-  .movie__cover-inner {
-    position: relative;
-    height: 360px;
-  }
-  
-  .movie__cover {
-    max-width: 100%;
-    height: 100%;
-  }
-  
-  .movie__cover--darkened {
-    background-color: #000000;
-    opacity: 0.1;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    max-width: 100%;
-    height: 100%;
-    z-index: 1;
-  }
-  
-  .movie__cover--darkened:hover {
-    background-color: grey;
-    cursor: pointer;
-  }
-  
-  .movie__info {
-    padding: 10px 0px;
-  }
-  
-  .movie__title {
-    font-size: 16px;
-    color: #ffffff;
-  }
-  
-  .movie__category {
-    font-size: 14px;
-    color: #ffd80e;
-  }
-  
-  .movie__average {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    right: 0;
-    border-radius: 50%;
-    width: 36px;
-    height: 36px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #1a191f;
-    color: #ffffff;
-    font-size: 14px;
-  }
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+
+body {
+  background-image: url(https://animeslayers.ru/wp-content/uploads/kartinki/steam/dlyasteam19.jpg) !important;
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+
+
+
+  font-family: "Open Sans", sans-serif;
+}
+
+
+.header__logo {
+  font-size: 40px;
+  text-decoration: none;
+  color: #ffffff;
+  font-family: "Anton", sans-serif;
+  font-weight: bold;
+  text-shadow: 1px 1px 10px black, 0 0 1em rgb(255, 0, 0); /* <!-- насыщенность крансого? --> */
+  transition: underline 0.2s linear;
+}
+
+.header__logo:hover {
+  text-decoration: underline;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.container_movies {
+  border: 4px solid;
+  border-radius: 15px;
+  border-color: rgb(199 149 65 / 20%);
+  max-width: 820px;
+  margin: auto;
+  background-color: #2e28289c;
+}
+
+.header__content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 16px;
+  height: 60px;
+}
+
+.header__search {
+  padding: 8px;
+  border: 2px solid #1a191f;
+  border-radius: 5px;
+  outline: none;
+}
+
+.movies {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.movie {
+  width: 240px;
+  margin: 10px;
+  position: relative;
+  right: auto;
+  left: auto
+}
+
+.movie__cover-inner {
+  position: relative;
+  height: 360px;
+}
+
+.movie__cover {
+  max-width: 100%;
+  height: 100%;
+}
+
+.movie__cover--darkened {
+  background-color: #000000;
+  opacity: 0.1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  max-width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
+.movie__cover--darkened:hover {
+  background-color: grey;
+  cursor: pointer;
+}
+
+.movie__info {
+  padding: 10px 0px;
+}
+
+.movie__title {
+  font-size: 16px;
+  color: #ffffff;
+}
+
+.movie__category {
+  font-size: 14px;
+  color: #e9de8e;
+}
+
+.movie__average {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  right: 0;
+  border-radius: 50%;
+  width: 36px;
+  height: 36px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #1a191f;
+  color: #ffffff;
+  font-size: 14px;
+}
